followed video but still won't authenticate
