# routes/index.js
@@ -1,0 +1,18 @@
+const passport = require('passport');
+
+const router = require('express').Router();
+
+router.use('/', require('./swagger'));
+router.use('/recipes', require('./recipes'));
+router.use('/users', require('./users'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => { });
+
+router.get('/logout', function (req, res, next) {
+    req.logout(function (err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
+
+module.exports = router;
